# raytracer

./: .gitignore  CMakeLists.txt  README.md  compile.sh  project.Dockerfile  shader.glsl
glad/include/KHR/: khrplatform.h
glad/include/glad/: glad.h
glad/src/: glad.c
include/: aabb.hpp  controls.hpp  load_model.hpp  use_opengl.h
models/: SUPERDINGUS_TOO_MANY_TEXTURES.glb  UNIDINGUS.glb  dingus_chair.glb  monke.gltf  nicer_cube.gltf  smol.glb  textured.glb  triangles_2.gltf
shaders/: aabb.frag  aabb.glsl  shader.glsl  spinning.glsl
src/: aabb.cpp  controls.cpp  load_model.cpp  main.cpp  use_opengl.h
